@@ -6,6 +6,7 @@ Stable versions
 	- add sanity check to GDM loader
 	- add sanity check to MDL pattern loader
 	- add sanity check to RAD pattern loader
+	- add sanity check to MGT pattern loader
 	- add sanity check to AMD number of patterns
 	- add sanity check to MMD1/3 number of channels
 	Other changes:
